# tpv-chaquopy-public

./: .coverage  .coveragerc  .editorconfig  .env.example  .gitignore  .tpv_hmac_secret  .tpv_secret_key  =3.1  AGENT_EVAL.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  Dockerfile  LICENSE  README.md  README.md.bak_v240  REFACTOR_PLAN.md  SECURITY.md  SWAGGER_UI.md  actualizar_repo.sh  add_crash_debug.py  add_dark_bubble.py  aplicar_fix_catalogo_menu_fase7c.sh  aplicar_parche_v7.sh  aplicar_parches.sh  apply_15_fixes.sh  apply_dao_split.py  apply_v1.py  apply_v3.sh  apply_v4.py  build.gradle  build_patch.sh  cleanup.py  conftest.py  crear_db_demo.py  debug_server.py  dev_frontend.sh  diag_resto.py  docker-compose.yml  fix3.sh  (+78 more)
.backup-tpv-20260617-162801/: index.html  manifest_raiz.json
.git.backup/: COMMIT_EDITMSG  ORIG_HEAD  config  index  packed-refs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
_backup_pre_mod/: app.py  dev_metrics.py  reasoning_engine.py  settings_routes.py  tienda_routes.py  tool_registry.py
app/: .coverage  build.gradle  build.gradle.bak_v230  build.gradle.bak_v240  proguard-rules.pro  proguard-rules.pro.bak_v230
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKEND_MAP.md  CHANGELOG.md  CHANGELOG_v13.md  CHANGELOG_v2.5.5.md  CHANGELOG_v8.md  CHAQUOPY_INTEGRATION.md  CHECKLIST_RELEASE.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEFENSA.md  DEMO_3_MIN.md  DEVELOPER_GUIDE.md  DIAGRAMS_CATALOG.md  DOCUMENTACION_TESIS.md  EVALUACION_ACADEMICA.md  FINAL_RELEASE_STATUS.md  GLOSSARY.md  MATRIZ_EVALUACION_APK.md  NON_TECHNICAL_JURY_GUIDE.md  PROJECT_MASTER_GUIDE.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP_10_10.md  STATE_OF_THE_ART.md  SYSTEM_LAYERS_AND_OSI.md  TELECOM_ENGINEERING.md  THESIS_DEFENSE_GUIDE.md  UI_UX_AND_SECURITY_FINAL.md  openapi.yaml  telecom_diagnostico.md
scripts/: gen_api_reference.py  reset_bd.py  smoke_test.py  test_v25_runner.py  validate.sh
tests/: conftest.py  test_30.py  test_anonimo_persistente.py  test_api.py  test_api_v8.py  test_apk.py  (+42 more)
(+917 files in other folders)
