[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "tpv-ultra-smart"
version = "10.0.0"
description = "TPV Ultra Smart"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["flask==2.2.5", "werkzeug==2.2.3", "jinja2==3.1.2", "markupsafe==2.1.3", "itsdangerous==2.1.2", "click==8.1.7", "six==1.16.0"]
[tool.ruff]
target-version = "py310"
line-length = 100
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -W ignore::DeprecationWarning"
[tool.coverage.run]
source = ["app/src/main/python"]
omit = ["*/tests/*", "*/legacy/*", "*/docs/*", "*/scripts/*"]
