[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "tpv-ultra-smart"
version = "6.13.1"
description = "TPV Ultra Smart"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "six==1.16.0",
  "flask==2.2.5; python_version < '3.14'",
  "werkzeug==2.2.3; python_version < '3.14'",
  "jinja2==3.1.2; python_version < '3.14'",
  "markupsafe==2.1.3; python_version < '3.14'",
  "itsdangerous==2.1.2; python_version < '3.14'",
  "click==8.1.7; python_version < '3.14'",
  "flask>=3.1,<4; python_version >= '3.14'",
  "werkzeug>=3.1,<4; python_version >= '3.14'",
  "jinja2>=3.1.6,<4; python_version >= '3.14'",
  "markupsafe>=3,<4; python_version >= '3.14'",
  "itsdangerous>=2.2,<3; python_version >= '3.14'",
  "click>=8.2,<9; python_version >= '3.14'",
]
[tool.ruff]
target-version = "py310"
line-length = 100
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -W ignore::DeprecationWarning"
[tool.coverage.run]
source = ["app/src/main/python"]
omit = [
  "*/tools/i18n_builder.py",
  "*/tools/*_tools.py",
  "*/security/audit.py",
  "*/ai_routes.py",
  "*/api_routes.py",
  "*/tpv_rutas.py","*/tests/*", "*/legacy/*", "*/docs/*", "*/scripts/*"]
